--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,5 +1,5 @@
 <h1 i18n>Indeed (Job Portal Site)</h1>
-<h2>Lets get to work India! Mere Dost..</h2>
+<h2>Lets get to work India! Mere Dost.. Lajawab</h2>
 <br>
 <div class="row">
   <div class="col-xs-3 col-xs-offset-1">
